--- a/pipelinee/Jenkinsfile
+++ b/pipelinee/Jenkinsfile
@@ -44,7 +44,7 @@ pipeline {
         }
         stage('SonarQube Analysis') {
             steps {
-                withSonarQubeEnv() {
+                withSonarQubeEnv('SonarScanner') {
                     sh "${scannerHome}/bin/sonar-scanner"
                 }
             } 
